--- a/index.html
+++ b/index.html
@@ -36,25 +36,26 @@
             <div class="js-box">
                 <p>For the time spent on this site, <br>
 
-                    starsBorn new stars were born. <br>
-                    starsDied stars exploded. <br>
-                    Earth traveled earthTravelDistance(km) in space. <br>
-                    Universe has expanded by more than universeExpandcount(km). </p>
+                    <span id="starsBorn">0</span> new stars were born. <br>
+                    <span id="starsDied">0</span> stars exploded. <br>
+                    Earth traveled <span id="earthTravel">0</span> km in space. <br>
+                    Universe has expanded by more than <span id="universe">0</span> km. </p>
             </div>
         </div>
 
         <div class="about">
             <h1>Hello.</h1>
-            <p>It's me --Simeon.</p>
-            <p>You know me right? NO? What are you doing here than? </p>
+            <p id="itsme">It's me --Simeon.</p>
+            <p id="aside">You know me right? <br> What are you doing here than? </p>
             <h2>Brief About Me</h2>
-            <p>I'm a novice Full Stack Engineer located in Slovakia. At the moment, I'm completing a course on web development on the CodeCademy website - and in fact, this website is part of it. So don't take this very seriously, but I hope you like it at least a little. What more? Everything -- 42 --.</p>
+            <p id="textall">I'm a novice Full Stack Engineer located in Slovakia. At the moment, I'm completing a course on web development on the CodeCademy website - and in fact, this website is part of it. So don't take this very seriously, but I hope you like it at least a little. What more? Everything -- 42 --.</p>
         </div>
     </main>
                    
     <footer>
         <p id="signature">Made with &#10084; in Slovakia </p>
     </footer>
-    
+    <script src="./js/script.js"></script>
+
   </body>
 </html>
