contact_page_preview

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="js-box">
                 <p>For the time spent on this site, <br>
 
-                    <span id="starsBorn">0</span> new stars were born. <br>
+                    <span id="starsBorn">0</span>k new stars were born. <br>
                     <span id="starsDied">0</span> stars exploded. <br>
                     Earth traveled <span id="earthTravel">0</span> km in space. <br>
                     Universe has expanded by more than <span id="universe">0</span> km. </p>
